--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ blinker==1.8.2
 cffi==1.16.0
 click==8.1.7
 cryptography==42.0.8
+et-xmlfile==1.1.0
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Migrate==4.0.7
@@ -15,12 +16,19 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
+numpy==2.0.0
+openpyxl==3.1.5
 packaging==24.1
+pandas==2.2.2
 pathspec==0.12.1
 platformdirs==4.2.2
 pycparser==2.22
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six==1.16.0
 SQLAlchemy==2.0.31
 tomli==2.0.1
 typing_extensions==4.12.2
+tzdata==2024.1
 Werkzeug==3.0.3
