--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.13.1
+APScheduler==3.10.4
 bcrypt==4.1.3
 black==24.4.2
 blinker==1.8.2
@@ -8,6 +9,8 @@ cryptography==42.0.8
 et-xmlfile==1.1.0
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
+Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
@@ -23,6 +26,7 @@ pandas==2.2.2
 pathspec==0.12.1
 platformdirs==4.2.2
 pycparser==2.22
+PyJWT==2.8.0
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
@@ -31,4 +35,5 @@ SQLAlchemy==2.0.31
 tomli==2.0.1
 typing_extensions==4.12.2
 tzdata==2024.1
+tzlocal==5.2
 Werkzeug==3.0.3
