--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ cryptography==42.0.8
 et-xmlfile==1.1.0
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
+Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
