--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+flask-talisman==1.1.0
 greenlet==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
