--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 flask-talisman==1.1.0
 greenlet==3.0.3
+gunicorn==22.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
