--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 flask-talisman==1.1.0
+Flask-Testing==0.8.1
 greenlet==3.0.3
 gunicorn==22.0.0
 itsdangerous==2.2.0
@@ -33,6 +34,7 @@ pycparser==2.22
 PyJWT==2.8.0
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
 SQLAlchemy==2.0.31
