--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,8 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
-mypy-extensions==1.0.0
-numpy==2.0.0
+#mypy-extensions==1.0.0
+#numpy==2.0.0
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.2
