--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ MarkupSafe==2.1.5
 #numpy==2.0.0
 openpyxl==3.1.5
 packaging==24.1
-pandas==2.2.2
+#pandas==2.2.2
 pathspec==0.12.1
 platformdirs==4.2.2
 pycparser==2.22
